--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,15 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" href="./assets/foundation/css/foundation.min.css">
+  <link rel="stylesheet" href="./assets/foundation/css/foundation-icons.css">
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="./assets/foundation/js/jquery.js"></script>
+  <script src="./assets/foundation/js/foundation.min.js"></script>
+  <script src="./assets/foundation/js/what-input.js"></script>
 </body>
 </html>
